# mev-liquidation-phase-a

./: .env.example  .gitignore  README.md  README.md   pyproject.toml
docs/: ALPHA_HYPOTHESES.md  EXPERIMENT_DESIGN.md  FAILURE_REPLAY_AND_RISK.md  OBSERVABILITY_SPEC.md  PROMOTION_CRITERIA.md  RESEARCH_OVERVIEW.md  SYSTEM_ARCHITECTURE.md
notebooks/: backtest_dashboard.ipynb
output/: bt_b7383fa5014d.json
output/logs/: cli_20260115_150338_run1.jsonl
sample_data/: known_addresses.json  sample_positions.csv  sample_positions.json
src/mev_analysis/: __init__.py  cli.py
src/mev_analysis/core/: __init__.py  backtest.py  logging.py  opportunity_detector.py  safe_mode.py
src/mev_analysis/data/: __init__.py  aave_v3.py  constants.py  health_factor.py  models.py  position_loader.py
src/mev_analysis/simulation/: __init__.py  bots.py  engine.py
src/mev_analysis/utils/: __init__.py
tests/: __init__.py  conftest.py  test_backtest.py  test_bots.py  test_cli.py  test_health_factor.py  test_logging.py  test_models.py  test_opportunity_detector.py  test_position_loader.py  test_safe_mode.py  test_simulation_engine.py
